--- a/package.json
+++ b/package.json
@@ -17,11 +17,9 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "sass": "^1.53.0",
-        "vite": "^2.9.11"
-    },
-    "dependencies": {
+        "vite": "^2.9.11",
+        "prettier": "^2.7.1",
         "bootstrap": "^5.2.0-beta1",
-        "clsx": "^1.2.0",
-        "prettier": "^2.7.1"
+        "clsx": "^1.2.0"
     }
 }
