--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-react": "^0.8.0",
         "@inertiajs/progress": "^0.2.6",
+        "@inertiajs/server": "^0.1.0",
         "@vitejs/plugin-react": "^1.3.2",
         "laravel-vite-plugin": "^0.2.1",
         "react": "^17.0.2",
